[gd_scene load_steps=5 format=3 uid="uid://c8s54m60mabi0"]

[ext_resource type="PackedScene" uid="uid://cbxh6udih8jhj" path="res://entities/creature.tscn" id="1_6iu15"]
[ext_resource type="Script" path="res://entities/enemies/enemy.gd" id="2_xe27x"]
[ext_resource type="Texture2D" uid="uid://dlorxcvsogl5h" path="res://assets/interact_marker.png" id="4_wryyh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u83fy"]
radius = 24.0

[node name="Enemy" instance=ExtResource("1_6iu15")]
script = ExtResource("2_xe27x")
sight_range = 128.0
min_player_dist = 48.0
move_speed = 64.0

[node name="nav" type="NavigationAgent2D" parent="." index="3"]
debug_enabled = true

[node name="target" type="Sprite2D" parent="." index="4"]
visible = false
texture = ExtResource("4_wryyh")

[node name="attack_area" type="Area2D" parent="." index="5"]

[node name="shape" type="CollisionShape2D" parent="attack_area" index="0"]
shape = SubResource("CircleShape2D_u83fy")

[connection signal="navigation_finished" from="nav" to="." method="_on_nav_navigation_finished"]
[connection signal="target_reached" from="nav" to="." method="_on_nav_target_reached"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
